loadbalancer/IngressRoute-argocd-dashboard-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-dashboard-route
  namespace: loadbalancer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.anderwerse.de`)
      services:
        - name: argocd-server
          namespace: argocd
          port: 80
  tls:
    secretName: anderwersede-tls-certificate
